--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,9 +19,13 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   background-color: #0a0a0a;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
